--- a/páginaDeEjemplo/styles/style.css
+++ b/páginaDeEjemplo/styles/style.css
@@ -14,14 +14,14 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 5px;
     background-image:linear-gradient(-60deg, transparent, #ffd60a 14%, #e0772a 28%, #ff6f00 42%, #ff6a00 56%, #e34d4d 70%, #ff0000 84%, rgb(255 9 0 / 0%)); /* Degradado de colores cálidos */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra sutil */
 }
 
 .logo {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     object-fit: cover;
     border-radius: 50%;
     border: 2px solid #fff; /* Borde blanco alrededor del logo */
@@ -30,7 +30,7 @@ body {
 .list-link {
     list-style: none;
     display: flex;
-    width: 50%;
+    width: 40%;
     justify-content: space-around;
     align-items: center;
     margin: 0;
@@ -41,9 +41,8 @@ body {
 }
 
 .boton-nav {
-    text-decoration: none;
-    background-color: #df5b14; /* Color de fondo de los botones */
-    color: #ffffff;
+    text-decoration: none; 
+    color: #000000;
     font-weight: 600;
     padding: 15px 20px; /* Espaciado mejorado */
     border-radius: 20px; /* Bordes más redondeados */
